# nodeblocks-server

./: .gitignore  LICENSE  README.md  TODO.md  logging.conf  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/nodeserver/: .env.example  __init__.py
src/nodeserver/api/: base_nodes.py  base_server.py  instance_states.py  node_builder.py  node_scene.py  server_instance.py  websocket_manager.py
src/nodeserver/api/actions/: action_controller.py  conn_actions.py  node_actions.py
src/nodeserver/api/instance/: base_nodes.py  instance_runtime.py  instance_states.py  node_scene.py  server_instance.py
src/nodeserver/api/instance/actions/: action_controller.py  (+2 more)
src/nodeserver/api/internal/: instance_manager.py  instance_state.py  internal_protocols.py  node_protocols.py  websocket_handler.py  websocket_messages.py  websocket_protocol.py
src/nodeserver/api/node/: node_exceptions.py  node_parameters.py  node_utils.py  nodes.py  slots.py
src/nodeserver/api/utils/: env_variables.py  file_utils.py  session_utils.py  url_routing.py  version_manager.py  workspace_utils.py
src/nodeserver/api/web/: command_router.py  message_router.py  websocket_manager.py  websocket_messages.py  websocket_protocol.py
src/nodeserver/networking/nodes/: node_constructor.py  node_parser.py
src/nodeserver/networking/utils/: uuid_utils.py
src/nodeserver/wrapper/utils/: type_reader_utils.py  uuid_utils.py
tests/: instance_test.py  nodes_v2.py  scene_file_test.py  test_client.py  test_data.py  typing_file_test.py  websocket_test.py
(+49 files in other folders)
